--- a/src/app/topic/components/topic-invite/topic-invite.component.html
+++ b/src/app/topic/components/topic-invite/topic-invite.component.html
@@ -136,7 +136,7 @@
                     </cos-initials>
                   </div>
                 </div>
-                <div class="bold" [innerHtml]>{{user.name}}</div>
+                <div class="bold" [innerHtml]="user.name"></div>
               </div>
               <div class="level">
                 <div id="mobile_roles_tooltip" class="tooltip" tooltip>
