--- a/src/app/group/components/group-invite/group-invite.component.html
+++ b/src/app/group/components/group-invite/group-invite.component.html
@@ -143,7 +143,7 @@
                 </cos-initials>
               </div>
             </div>
-            <div class="bold" [innerHtml]>{{user.name}}</div>
+            <div class="bold" [innerHtml]="user.name"></div>
           </div>
           <div class="row_cell">
             <div class="dropdown" [cosDropdown]>
