--- a/src/app/group/components/group-member-user/group-member-user.component.html
+++ b/src/app/group/components/group-member-user/group-member-user.component.html
@@ -9,7 +9,7 @@
         </div>
       </div>
       <div class="member_name_wrap">
-        <div class="bold" [innerHtml]>{{member.name}}</div>
+        <div class="bold" [innerHtml]="member.name"></div>
         <div class="member_info">{{member.email}}</div>
       </div>
     </div>
