--- a/src/app/topic/components/invite-editors/invite-editors.component.html
+++ b/src/app/topic/components/invite-editors/invite-editors.component.html
@@ -169,7 +169,7 @@
                           </cos-initials>
                         </div>
                       </div>
-                      <div class="bold" [innerHtml]>{{user.name}}</div>
+                      <div class="bold" [innerHtml]="user.name"></div>
                     </div>
                     <div class="level">
                       <div id="mobile_roles_tooltip" class="tooltip" tooltip>
