--- a/src/app/topic/components/topic-follow-up-create-dialog/topic-follow-up-create-dialog.component.html
+++ b/src/app/topic/components/topic-follow-up-create-dialog/topic-follow-up-create-dialog.component.html
@@ -76,7 +76,25 @@
                   fill="#EF4025" />
               </svg>
               <span class="error_text bold"
-                translate="COMPONENTS.TOPIC_FOLLOW_UP_CREATE.DIALOG_TAB_INTRODUCTION_ITEM_4"></span>
+                translate="COMPONENTS.TOPIC_FOLLOW_UP_CREATE.DIALOG_TAB_INTRODUCTION_ITEM_7"></span>
+            </div>
+            <div class="row"><svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929Z"
+                  fill="#EF4025" />
+              </svg>
+              <span class="error_text bold"
+                translate="COMPONENTS.TOPIC_FOLLOW_UP_CREATE.DIALOG_TAB_INTRODUCTION_ITEM_5"></span>
+            </div>
+            <div class="row"><svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929Z"
+                  fill="#EF4025" />
+              </svg>
+              <span class="error_text bold"
+                translate="COMPONENTS.TOPIC_FOLLOW_UP_CREATE.DIALOG_TAB_INTRODUCTION_ITEM_6"></span>
             </div>
             <div class="row"><svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
@@ -91,13 +109,6 @@
                   fill="#2C3B47" />
               </svg>
               <span translate="COMPONENTS.TOPIC_FOLLOW_UP_CREATE.DIALOG_TAB_INTRODUCTION_ITEM_3"></span>
-            </div>
-            <div *ngIf="topic.discussionId" class="row"><svg width="24" height="24" viewBox="0 0 24 24" fill="none"
-                xmlns="http://www.w3.org/2000/svg">
-                <path d="M9.38602 14.8088L17.5256 6L19 7.59558L9.38602 18L5 13.2534L6.47436 11.6578L9.38602 14.8088Z"
-                  fill="#2C3B47" />
-              </svg>
-              <span translate="COMPONENTS.TOPIC_FOLLOW_UP_CREATE.DIALOG_TAB_INTRODUCTION_ITEM_5"></span>
             </div>
           </div>
           <div class="dialog_info_wrap">
