--- a/src/app/topic/components/topic-participants/topic-participants.component.scss
+++ b/src/app/topic/components/topic-participants/topic-participants.component.scss
@@ -21,7 +21,7 @@
   }
   .dropdown {
     min-width: 160px;
-
+    position: relative;
     .options {
       min-width: max-content;
       max-width: max-content;
