--- a/src/app/group/group.component.html
+++ b/src/app/group/group.component.html
@@ -1,7 +1,7 @@
 <div class="page_content" *ngIf="group$ | async as group;">
   <div id="page_header">
     <div id="user_info_area">
-      <ng-container *ngIf="!auth.loggedIn$.value">
+      <ng-container *ngIf="!auth.loggedIn$.value || group.visibility === GroupService.VISIBILITY.public">
         <button class="btn_medium_close icon" [routerLink]="['/', translate.currentLang, 'public', 'groups']"><svg
             width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path
@@ -12,7 +12,7 @@
         <div class="small_heading mobile_hidden" [innerHTML]="'VIEWS.GROUP.HEADING_BACK_TO_PUBLIC_GROUPS'| translate">
         </div>
       </ng-container>
-      <ng-container *ngIf="auth.loggedIn$.value">
+      <ng-container *ngIf="auth.loggedIn$.value && group.visibility === GroupService.VISIBILITY.private">
         <button class="btn_medium_close icon" [routerLink]="['/', translate.currentLang, 'my', 'groups']"><svg
             width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path
