--- a/src/app/topic/components/topic-member-invite/topic-member-invite.component.scss
+++ b/src/app/topic/components/topic-member-invite/topic-member-invite.component.scss
@@ -13,7 +13,7 @@
 
 .dropdown {
   .options {
-    position: fixed;
+    position: absolute;
     margin-top: 30px;
     width: max-content;
     max-width: max-content;
