--- a/src/app/topic/components/topic-settings-locked/topic-settings-locked.component.html
+++ b/src/app/topic/components/topic-settings-locked/topic-settings-locked.component.html
@@ -18,15 +18,15 @@
             d="M17.3359 16.5357L22.8319 15.8098L20.4295 27.7096C20.2591 28.5695 20.4991 29.0576 21.1591 29.0576C21.6247 29.0576 22.3255 28.8806 22.8055 28.4354L22.5943 29.4876C21.9055 30.3626 20.3863 31 19.0783 31C17.3911 31 16.6735 29.9327 17.1391 27.664L18.9103 18.8929C19.0639 18.1518 18.9247 17.8837 18.2191 17.7067L17.1391 17.4968L17.3359 16.5357Z"
             fill="white" />
         </svg>
-        <div class="small_heading link title" translate="MODALS.TOPIC_EDIT_DISABLED_HEADING"></div>
+        <div class="small_heading link title" translate="MODALS.TOPIC_SETTINGS_LOCKED_HEADING"></div>
       </div>
     </div>
     <div class="dialog_content no_footer">
-      <div class="delete_info_text" translate="MODALS.TOPIC_EDIT_DISABLED_DESCRIPTION"></div>
+      <div class="delete_info_text" translate="MODALS.TOPIC_SETTINGS_LOCKED_DESCRIPTION"></div>
       <div class="dialog_info_wrap">
         <div class="dialog_info">
-          <div class="bold" translate="MODALS.TOPIC_EDIT_DISABLED_WHY"></div>
-          <div translate="MODALS.TOPIC_EDIT_DISABLED_WHY_DESCRIPTION"></div>
+          <div class="bold" translate="MODALS.TOPIC_SETTINGS_LOCKED_WHY"></div>
+          <div translate="MODALS.TOPIC_SETTINGS_LOCKED_WHY_DESCRIPTION"></div>
         </div>
       </div>
 
@@ -44,13 +44,13 @@
         </div>
         <div class="message">
           <div class="content">
-            <div class="content_description" [innerHTML]="'MODALS.TOPIC_EDIT_DISABLED_INFO' | translate"></div>
+            <div class="content_description" [innerHTML]="'MODALS.TOPIC_SETTINGS_LOCKED_INFO' | translate"></div>
           </div>
         </div>
       </div>
 
       <div class="button_wrap">
-        <button class="btn_medium_submit" dialog-close translate="MODALS.TOPIC_EDIT_DISABLED_BTN_SETTINGS">
+        <button class="btn_medium_submit" dialog-close translate="MODALS.TOPIC_SETTINGS_LOCKED_BTN_SETTINGS">
         </button>
       </div>
     </div>
