--- a/src/app/topic/components/argument-reply/argument-reply.component.html
+++ b/src/app/topic/components/argument-reply/argument-reply.component.html
@@ -5,25 +5,10 @@
       <div class="heading" translate="COMPONENTS.ARGUMENT_REPLY.HEADING"></div>
     </div>
     <form name="argumentReply">
-      <!--cos-input
-        placeholder="{{'COMPONENTS.ARGUMENT_REPLY.SUBJECT_CHARACTERS_LEFT' | translate:{chars: reply.subject.length, charsLeft: ARGUMENT_SUBJECT_MAXLENGTH} }}">
-        <input id="argument_subject" name="subject" [(ngModel)]="reply.subject"
-          placeholder="{{'COMPONENTS.ARGUMENT_REPLY.PLACEHOLDER_ADD_SUBJECT_TO_ARGUMENT' | translate:{chars: reply.subject.length, charsLeft: ARGUMENT_SUBJECT_MAXLENGTH} }}"
-          class="gray_borders" [ngClass]="{'error_input': errors?.subject}"
-          [attr.maxlength]="ARGUMENT_SUBJECT_MAXLENGTH" required>
-        <label for="argument_subject" class="error_label" *ngIf="errors?.subject">
-          <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path fill-rule="evenodd" clip-rule="evenodd"
-              d="M8.89438 1.78863C8.52586 1.05158 7.47405 1.05158 7.10553 1.78863L0.723562 14.5526C0.391112 15.2175 0.874608 15.9998 1.61799 15.9998H14.3819C15.1253 15.9998 15.6088 15.2175 15.2763 14.5526L8.89438 1.78863ZM6.99996 6.99977C6.99996 6.44749 7.44767 5.99977 7.99996 5.99977C8.55224 5.99977 8.99996 6.44749 8.99996 6.99977V9.99977C8.99996 10.5521 8.55224 10.9998 7.99996 10.9998C7.44767 10.9998 6.99996 10.5521 6.99996 9.99977V6.99977ZM6.99996 12.9998C6.99996 12.4475 7.44767 11.9998 7.99996 11.9998C8.55224 11.9998 8.99996 12.4475 8.99996 12.9998C8.99996 13.5521 8.55224 13.9998 7.99996 13.9998C7.44767 13.9998 6.99996 13.5521 6.99996 12.9998Z"
-              fill="#EF4025" />
-          </svg>
-          <span translate="{{errors.subject}}"></span>
-        </label>
-      </!--cos-input-->
       <textarea cosmarkdown cosmarkdowntranslatecharacterstatuskey="COMPONENTS.ARGUMENT_REPLY.CHARACTER_LIMIT"
         id="argument_reply_text" [(item)]="reply.text" class="gray_borders" [ngClass]="{'error_input': errors?.text}"
         placeholder="COMPONENTS.ARGUMENT_REPLY.PLACEHOLDER_WRITE_REPLY_HERE"
-        [limit]="ARGUMENT_TYPES_MAXLENGTH['reply']"></textarea><!--(keyup)="argumentTextLengthCheck(form, form.text)"-->
+        [limit]="ARGUMENT_TYPES_MAXLENGTH['reply']"></textarea>
       <label for="argument_reply_text" class="error_label" *ngIf="errors?.text">
         <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path fill-rule="evenodd" clip-rule="evenodd"
@@ -43,7 +28,7 @@
           </button>
         </div>
         <div>
-          <div class="btn_medium_submit bold" (click)="saveReply()" [ngClass]="{disabled: !reply.text.length}" translate="COMPONENTS.ARGUMENT_REPLY.BTN_POST_REPLY">
+          <div class="btn_medium_submit bold" (click)="saveReply()" [ngClass]="{disabled: !reply.text.length}" translate="COMPONENTS.ARGUMENT_REPLY.BTN_POST_REPLY" (keydown)="saveReply()">
           </div>
         </div>
       </div>
