--- a/src/app/topic/components/topic-arguments/topic-arguments.component.html
+++ b/src/app/topic/components/topic-arguments/topic-arguments.component.html
@@ -36,7 +36,7 @@
               </a>
             </ng-container>
             <ng-container *ngIf="canEditDeadline()">
-              <div class="option" (click)="editDeadline(discussion)">
+              <div class="option" (click)="editDeadline(discussion)" (keypress)="editDeadline(discussion)">
                 <div class="icon_wrap">
                   <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" clip-rule="evenodd"
@@ -51,7 +51,7 @@
             </ng-container>
             <ng-container *ngIf="!hasDiscussionEndedExpired(discussion);">
               <div class="line_separator"></div>
-              <div class="option" (click)="closeDiscussion(discussion)">
+              <div class="option" (click)="closeDiscussion(discussion)" (keypress)="closeDiscussion(discussion)">
                 <div class="icon_wrap">
                   <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <circle cx="8" cy="8" r="5.5" fill="#2C3B47" stroke="#2C3B47" />
@@ -85,21 +85,11 @@
         </div>
       </div>
       <ng-container *ngIf="arguments$ | async as arguments">
-        <ng-container *ngIf="arguments.length">
+        <ng-container *ngIf="arguments.length || filtersSelected">
           <div class="section_header">
             <div class="title_wrap">
               <div class="title" translate="COMPONENTS.TOPIC_ARGUMENTS.TITLE"
                 [translateParams]="{count: TopicArgumentService.count.value.total}"></div>
-              <!--div class="data_items_wrap">
-              <span class="data_item" translate="COMPONENTS.TOPIC_ARGUMENTS.LBL_ARGUMENTS_COUNT_PRO"
-                [translateParams]="{countPro:TopicArgumentService.count.value.pro}"></span>
-              <span class="data_item" translate="COMPONENTS.TOPIC_ARGUMENTS.LBL_ARGUMENTS_COUNT_CON"
-                [translateParams]="{countCon:TopicArgumentService.count.value.con}"></span>
-              <span class="data_item" translate="COMPONENTS.TOPIC_ARGUMENTS.LBL_ARGUMENTS_COUNT_POI"
-                [translateParams]="{countPoi:TopicArgumentService.count.value.poi}"></span>
-              <span class="data_item" translate="COMPONENTS.TOPIC_ARGUMENTS.LBL_ARGUMENTS_COUNT_REPLY"
-                [translateParams]="{countReplies:TopicArgumentService.count.value.reply}"></span>
-            </!--div-->
             </div>
             <button class="btn_medium_submit" (click)="doAddArgument()" [ngClass]="{disabled: hasDiscussionEndedExpired(discussion)}"
               translate="COMPONENTS.TOPIC_ARGUMENTS.BTN_ADD_YOUR_ARGUMENT"></button>
@@ -229,9 +219,10 @@
                   </div>
                   <div class="options">
                     <div class="option" translate="COMPONENTS.TOPIC_ARGUMENTS.FILTER_ARGUMENT_ORDER_BY_DEFAULT"
-                      (click)="TopicArgumentService.setParam('orderBy', null)"> </div>
+                      (click)="TopicArgumentService.setParam('orderBy', null)" (keypress)="TopicArgumentService.setParam('orderBy', null)"> </div>
                     <div class="option" *ngFor="let orderOption of orderByOptions"
-                      (click)="TopicArgumentService.setParam('orderBy', orderOption)">
+                      (click)="TopicArgumentService.setParam('orderBy', orderOption)"
+                      (keypress)="TopicArgumentService.setParam('orderBy', orderOption)">
                       {{'COMPONENTS.TOPIC_ARGUMENTS.FILTER_ARGUMENT_ORDER_BY_' + orderOption | uppercase | translate}}
                     </div>
                   </div>
@@ -248,7 +239,7 @@
               [page]="(TopicArgumentService.page$ | async) || 0"></cos-pagination>
           </div>
         </ng-container>
-        <div class="no_feature_yet" *ngIf="!arguments.length">
+        <div class="no_feature_yet" *ngIf="!arguments.length && !filtersSelected">
           <svg width="96" height="96" viewBox="0 0 96 96" fill="none" xmlns="http://www.w3.org/2000/svg">
             <g clip-path="url(#clip0_7696_17198)">
               <rect width="96" height="96" rx="48" fill="white" />
