--- a/src/app/topic/topic.component.html
+++ b/src/app/topic/topic.component.html
@@ -977,7 +977,7 @@
               </div>
               <div class="info_item" translate="VIEWS.TOPICS_TOPICID.SECTION_NOTIFICATIONS_DESC">
               </div>
-              <button *ngIf="TopicService.canDelete(topic)" class="btn_medium_secondary bold"
+              <button class="btn_medium_secondary bold"
                 (click)="app.doShowTopicNotificationSettings(topic.id)">
                 <div class="icon">
                   <svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
