--- a/src/assets/styles/_buttons_new.scss
+++ b/src/assets/styles/_buttons_new.scss
@@ -1,4 +1,5 @@
 @use "mixins";
+@use "variables" as *;
 
 %btn_big {
   padding: 8px 24px;
@@ -561,4 +562,8 @@ $button-styles: (
       }
     }
   }
+}
+
+.btn_submit {
+  @include mixins.button($color-primary, $color-background);
 }
