--- a/src/app/group/components/group-join/group-join.component.html
+++ b/src/app/group/components/group-join/group-join.component.html
@@ -68,6 +68,26 @@
         </div>
       </div>
     </ng-container>
+
+    <div class="dialog_content dialog_info_wrap">
+      <div class="dialog_info">
+        <div class="row">
+          <div>
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <rect width="24" height="24" rx="4" fill="#1168a8"></rect>
+              <path
+                d="M13.75 6.5C13.75 7.32843 13.0784 8 12.25 8C11.4216 8 10.75 7.32843 10.75 6.5C10.75 5.67157 11.4216 5 12.25 5C13.0784 5 13.75 5.67157 13.75 6.5Z"
+                fill="white"></path>
+              <path
+                d="M10.2099 10.0623L13.6449 9.63184L12.1434 16.6893C12.0369 17.1993 12.1869 17.4888 12.5994 17.4888C12.8904 17.4888 13.3284 17.3838 13.6284 17.1198L13.4964 17.7438C13.0659 18.2628 12.1164 18.6408 11.2989 18.6408C10.2444 18.6408 9.79593 18.0078 10.0869 16.6623L11.1939 11.4603C11.2899 11.0208 11.2029 10.8618 10.7619 10.7568L10.0869 10.6323L10.2099 10.0623Z"
+                fill="white"></path>
+            </svg>
+          </div>
+          <span translate="MODALS.GROUP_INVITE_VIEW_EMAIL_INFO"></span>
+        </div>
+      </div>
+    </div>
+    
     <div class="dialog_content no_footer">
       <div class="button_wrap">
         <button class="btn_big_submit" [dialog-close]="true" translate="COMPONENTS.GROUP_JOIN.BTN_JOIN"></button>
